edit nginx config, change pma to docker image

--- a/stackFile.yml
+++ b/stackFile.yml
@@ -78,6 +78,19 @@ services:
     deployTo:
       - magento
 
+  - name: pma
+    type: docker
+    image: phpmyadmin/phpmyadmin
+    version: latest
+    ports:
+      - 80
+    remoteAccess: false
+    env:
+      PMA_HOST: "{{=service('db').getMasterAlias()}}"
+      PMA_PORT: "{{=service('db').getMainPort()}}"
+    deployTo:
+      - magento
+
   - name: web
     type: nginx
     version: 1.15
@@ -89,26 +102,7 @@ services:
       - name: magento
         static: true
         src: ./configs/magento.conf
-    deployTo:
-      - magento
-
-  - name: pma
-    type: phpApache
-    version: 7.1
-    remoteAccess: true
-    ports:
-      - 8080
-    source:
-      type: git
-      url: https://github.com/phpmyadmin/phpmyadmin
-      version: STABLE
-    extensions:
-      - mysqli
-      - opcache
-    configFiles:
-      - dest: $MAIN_PATH/config.inc.php
-        src: ./configs/config.inc.php
-    localDeps: composer install
+      - name: pma
     deployTo:
       - magento
 
